  but if you don't, or you are on Windows or Mac OS X, then grab it at
  http://mercurial.selenic.com/
- Updated doc/compiling_win32.txt a bit.
- The unreal32docs translations in Greek, Spanish and Dutch are marked as
  out of date.
- CRLF conversion of unreal32docs.gr.html
- Zip links: once a link was zipped, the error message when closing the
  connection was never actually sent (due to buffering). Hence, things like
  the /SQUIT reason was never seen on the other side (just 'server closed
  the connection'). This has now been fixed.
- Fix compile failure introduced by last change when zip links are
  disabled.
- Check that the automatically-generated cloak keys fit unrealircd's
  own criteria before printing them out. (#4017)
- Added aliases/atheme.conf, provided by katsklaw (#0003990).
- Support installing the ircd binary for people who set
  --with-spath=<dpath>/bin/ircd.
- Add missing quotation to doc/help.fr.conf (#4026 by MewT).
- Remove temporary message (Unreal3.2.1) regarding cloaking modules.
- Add a self-documented and commented files {} block to example.conf.
- Another fix-for-fix of zip links buffering from a few weeks ago.
  Reported by fbi (#0004030).
- Win32: fix rehash from the command line not working, reported by Platzii
  (#0004028).
- Update curl-ca-bundle.crt
** 3.2.9-rc2 release **
- Updated credits (donations)
- Updated credits (supporters, coders)
** 3.2.9 release **
- Automatically regenerate Makefile if ./config.status --recheck was
  run.
- Fix compilation issue when disabling stacked
  extbans. https://bugs.gentoo.org/389949
- Attempt to make Makefile rules more parallelism friendly.
- Fix compilation issues with bundled tre and ./curlinstall-ed curl
  caused by over-generic regexes. Reported by warg.
- Fix version string in configure.ac.
- Include CMDS=STARTTLS in ISUPPORT/numeric 005 to let clients discover STARTTLS
  support through VERSION, before or after registration (#4064).