@@ -2320,3 +2320,4 @@
 - Fix version string in configure.ac.
 - Include CMDS=STARTTLS in ISUPPORT/numeric 005 to let clients discover STARTTLS
   support through VERSION, before or after registration (#4064).
+- Added patch from nenotopia to use more modern LUSERS numerics (#3967).
